--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">KActions</string>
-    <string name="extension_name">KActions</string>
+    <string name="app_name">kntfy</string>
+    <string name="extension_name">kntfy</string>
 
     <!-- ConfigScreen -->
     <string name="notification_settings">Notification Settings</string>
@@ -22,7 +22,7 @@
     <string name="connecting">Connecting…</string>
     <string name="send_test_message">Send test message</string>
     <string name="error_karoo_not_connected">Error: Karoo System is not connected</string>
-    <string name="test_message_content">Test message from KActions</string>
+    <string name="test_message_content">Test message from kntfy</string>
     <string name="test_message_sent">Test message sent successfully!</string>
     <string name="error_sending_message">Error sending message. Check your configuration.</string>
     <string name="settings_saved">Settings saved automatically</string>
